--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -16,18 +16,18 @@
 <head>
     <py:choose>
         <title py:when="hostname and servicename">
-            VigiBoard - ${l_('History for a raw event on host "%(hostname)s" and service "%(servicename)s"') % {
+            ${"VigiBoard - "}${l_('History for a raw event on host "%(hostname)s" and service "%(servicename)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
             }}
         </title>
         <title py:when="hostname">
-            VigiBoard - ${l_('History for a raw event on host "%(hostname)s"') % {
+            ${"VigiBoard - "}${l_('History for a raw event on host "%(hostname)s"') % {
                 'hostname': hostname,
             }}
         </title>
         <title py:otherwise="">
-            VigiBoard - ${l_('History for a raw event')}
+            ${"VigiBoard - "}${l_('History for a raw event')}
         </title>
     </py:choose>
 </head>
