--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -84,7 +84,7 @@
         </span>
     </div>
 
-    <h1><a href="${tg.url('/')}">VigiBoard</a></h1>
+    <h1><a href="${tg.url('/')}">${"VigiBoard"}</a></h1>
 </div>
 
 <script type="text/javascript" src="${tg.url('/js/main.js')}"></script>
