--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/loader.css')}"/>
-    <title>VigiGraph</title>
+    <title>${"VigiGraph"}</title>
 </head>
 
 <body>
