--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -5,7 +5,7 @@
       lang="fr">
     <xi:include href="main.html" />
 <head>
-    <title>VigiMap</title>
+    <title>${"VigiMap"}</title>
 
     <script type="text/javascript" src="${tg.url('/js/drag.move.ghost.js')}"></script>
 
