--- a/src/vigilo/themes/templates/vigigraph/main_simplified.html
+++ b/src/vigilo/themes/templates/vigigraph/main_simplified.html
@@ -11,7 +11,7 @@
     <title py:replace="''">Your title goes here</title>
     <meta py:replace="select('*')"/>
     <link rel="search" type="application/opensearchdescription+xml"
-        title="Vigigraph search" href="${tg.url('/rpc/getOpenSearch')}"/>
+        title="VigiGraph search" href="${tg.url('/rpc/getOpenSearch')}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/vigigraph.css')}" />
 
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <h1><a href="${tg.url('/')}">VigiGraph</a></h1>
+        <h1><a href="${tg.url('/')}">${"VigiGraph"}</a></h1>
     </div>
 
     <div id="content">
