--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -5,7 +5,7 @@
       lang="fr">
     <xi:include href="main.html" />
 <head>
-    <title>VigiMap</title>
+    <title>${"VigiMap"}</title>
     <!--[if !(IE 7)]><!--><style type="text/css">@import "${tg.url('css/non-ie7.css')}";</style><!--><![endif]-->
     <script type="text/javascript">
     window.addEvent('load', function () {
