--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <h1><a href="${tg.url('/')}">VigiMap<span id="maptitle"></span></a></h1>
+        <h1><a href="${tg.url('/')}">${"VigiMap"}<span id="maptitle"></span></a></h1>
     </div>
 
     <div id="menu">
