URL par défaut vers VigiBoard.
Corrige l'URL par défaut pour accéder à VigiBoard depuis les compteurs
de la légende de VigiMap.

Change-Id: I01e86edea0b2f6b6e0bcd4ca5fee861bcbf461a7
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1729
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="${tg.url('/js/hashchange.js')}"></script>
     <script type="text/javascript">
         Jx.baseURL = '${tg.url("/js/lib")}';
-        vigiboard_url = '${tg.url(tg.config.get("interfaces.vigiboard", "/vigiboard/"))}';
+        vigiboard_url = '${tg.url(tg.config.get("interfaces.vigiboard", "../vigiboard/"))}';
     </script>
     <!--!
         "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
