Revert "Modifications de la légende de VigiMap"
This reverts commit 973d143f64310f85011e47e400fc9f3f10fa0a18.
C'est une évolution, pas une anomalie.

Change-Id: Ia2ae1ff36bf4f9d1b76c6eabb476571660abb1bf
Refs: #1283,#1312,#1319,#1284
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1881
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -345,7 +345,7 @@ canvas {
     position: fixed;
     bottom: 0.5em;
     right: 0.5em;
-    width: 12em;
+    width: 11em;
     z-index: 99;
 }
 
@@ -384,24 +384,16 @@ canvas {
     font-size: 90%;
     padding: 0.2em 0;
 }
-
-#legend dl dt span {
+#legend dl dt {
     display: block;
     float: left;
-    width: 1.5em;
+    width: 2em;
     margin-right: 0.5em;
-    height: 22px;
+    text-align: center;
     clear: left;
 }
-
-#legend dl dt span + span {
-    height: auto;
-    text-align: center;
-    clear: none;
-    background-repeat: no-repeat;
-}
 #legend dl dd {
-    height: 24px;
+    border: 1px solid transparent;
 }
 
 #legend dl > dd > span {
