--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -19,10 +19,7 @@
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/hashchange.js')}"></script>
-    <script type="text/javascript">
-        Jx.baseURL = '${tg.url("/js/lib")}';
-        vigiboard_url = '${tg.url(tg.config.get("interfaces.vigiboard", "../vigiboard/"))}';
-    </script>
+    <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
     <!--!
         "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
         avant "i18n", qui doit être chargé avant nos scripts.
