Revert "[#1278] Modification du bouton "home" des IHMs."
This reverts commit 3382e89e6793a6926cd3280595ddf563ef9d8f88.
Refs: #1278.

Change-Id: Idd93d3df357854b6adf56c293f2a979e9e6a4be6
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1886
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -10,9 +10,9 @@
     text-decoration: none;
 }
 
-#home {
-    margin: 0.1em 0;
-    margin-right: 0.3em;
+#logo {
+    /*margin: 0 0.2em;*/
+    margin: 0.3em 0.2em;
     float: left;
 }
 
