--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -49,9 +49,9 @@
         si vous changez l'en-tête.
     -->
     <div id="header">
-        <span id="home">
-            <a href="${tg.url(tg.config.get('home_link', '/'))}">
-                <img alt="${''}" src="${tg.url('/images/home.png')}"/>
+        <span id="logo">
+            <a href="${tg.url(tg.config.get('logo_link', '/'))}">
+                <img alt="${''}" src="${tg.url('/images/vigilo.png')}"/>
             </a>
         </span>
 
