Simplification écriture de plugins pour VigiBoard.
Ajoute une fonction "generic_plugin" dans VigiBoard pour simplifier
l'écriture de plugins.
La fonction permet de construire l'en-tête pour un plugin en gérant
correctement le tri sur cet en-tête.

Change-Id: I44cbdb74cc9db780c4524dd5c7e78ef308ef3373
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1899
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/plugins/date.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/date.html
@@ -3,6 +3,8 @@
       py:strip="">
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="date_header(name, instance, sort, order)">
+    <!--! On ne peut pas utiliser generic_plugin_header() ici
+          car le formatage est un peu différent (2 lignes). -->
     <py:with vars="next_order=(sort != name) and 'asc' or {'asc': 'desc', 'desc': 'asc'}[order]">
         <a id="sortLink" title="${{
                 'asc': l_('Sort by %s in ascending order'),
