--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -7,6 +7,19 @@
 <xi:include href="toolbar.html"/>
 <?python from genshi import XML ?>
 
+<py:def function="generic_plugin_header(name, idsort, column, label)">
+<py:with vars="next_order=(sort != idsort) and 'asc' or {'asc': 'desc', 'desc': 'asc'}[order]">
+    <a id="sortLink" title="${{
+            'asc': l_('Sort by %s in ascending order'),
+            'desc': l_('Sort by %s in descending order'),
+        }[next_order] % label.lower()}"
+        href="${tg.url('/', params=fixed_search, sort=idsort, order=next_order, page=page.page)}">
+        ${column}
+        <img src="${tg.url('/images/' + order + '.gif')}" py:if="sort == idsort"/>
+    </a>
+</py:with>
+</py:def>
+
 <py:match path="head" once="true">
 <head py:attrs="select('@*|py:with')">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
