[#1457] Rafraichissement AJAX dans VigiBoard
Change le mécanisme de rafraichissement du tableau de VigiBoard pour
utiliser de l'AJAX.
Réutilise le fichier "loader.js" pour obtenir un sablier lors du
chargement (et donc suppression des copies dans VigiMap/VigiGraph).
Le script "loader.js" est enrichi pour pouvoir ajouter la notion d'un
calque qui est rendu semi-opaque lors de l'exécution de la requête.

Change-Id: I64023bb1676c5394e74c5dd41cebb9fbfebe003e
Refs: #1457.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1900
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -415,3 +415,18 @@ div.clearingdiv {
     padding-top: 1px;
     padding-left: 10px;
 }
+
+#loading {
+    padding: 10% 0px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    display: none;
+}
+
+#loading img {
+    margin: auto;
+    background-color: white;
+    padding: 2px;
+    border: 1px solid gray;
+}
