--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-	<table class="vigitable" summary="Event history" >
+	<table class="vigitable loadingLayer" summary="Event history" >
 		<thead>
 	        <tr>
 	            <th colspan="5">
