--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<table class="vigitable" summary="Masked events list" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in config['columns_plugins']])">
+	<table class="vigitable loadingLayer" summary="Masked events list" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in config['columns_plugins']])">
 		<thead>
 	        <tr>
 		    	<th colspan="8">
