[#1498] Barre de défilement trop fine
Dans le popup de détail de VigiMap, lorsqu'il y a
trop de dépendances et qu'une barre de défilement
est ajoutée, elle est trop fine (partiellement
masquée) sous IE.

Testé sur:
- Firefox 31.3
- Firefox 38.3
- Chromium 31
- Google Chrome 45
- IE8
- IE9
- IE10
- IE11

Change-Id: Iee39a58a3c5accfa6a8c41ff7348d2545f3e6537
Refs: #1498
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1917
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -262,6 +262,14 @@ h1 a:hover {
 
 /* Panneau de details */
 
+/* Target IE9,10,11 to solve a scrollbar size problem inside Dialog popup */
+@media screen and (min-width:0\0) {
+    .jxDialogContentContainer {
+        padding-right: 13px;
+        padding-bottom: 15px;
+    }
+}
+
 #details {
     font-size: 80%;
 }
