Génération/parsing d'URL au format TurboGears
Patche le code de mootools/mootools-more pour que les URLs générées le
soient au format de TurboGears plutôt qu'au format PHP.

NB : le schéma d'encodage choisi par TurboGears ne permet pas de
     distinguer une valeur scalaire d'un tableau contenant une seule
     valeur. Le code de mootools décodera ce cas particulier comme une
     valeur scalaire. L'application devra convertir la valeur en tableau
     si nécessaire (cf. fonction $splat de mootools).

Change-Id: I38819fd7032c59b3559fbcd587324248572e846a
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/2412
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>

--- a/src/vigilo/themes/templates/common/login.html
+++ b/src/vigilo/themes/templates/common/login.html
@@ -11,6 +11,7 @@
     <title>${tg.config.app_name + ' - ' + l_('Login Form')}</title>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/login.js')}"></script>
 </head>
 
