--- a/src/vigilo/themes/templates/vigiadmin/collect.html
+++ b/src/vigilo/themes/templates/vigiadmin/collect.html
@@ -10,12 +10,14 @@
 <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
 <title>Collect</title>
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/Autocompleter/Autocompleter.css')}" />
-    <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.Request.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Observer.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/vigilo.js')}"></script>
+
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Autocompleter.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Autocompleter.Request.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Observer.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/Autocompleter.Request.VigiloJSON.js')}"></script>
 </head>
 
 <body>
