--- a/src/vigilo/themes/templates/vigiboard/silence.html
+++ b/src/vigilo/themes/templates/vigiboard/silence.html
@@ -14,6 +14,7 @@
    <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
     <!--!
