--- a/src/vigilo/themes/templates/vigiboard/silence_form.html
+++ b/src/vigilo/themes/templates/vigiboard/silence_form.html
@@ -16,6 +16,7 @@
     </script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Request.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Observer.js')}"></script>
