--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -22,6 +22,7 @@
 
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
 
     <script type="text/javascript">
