--- a/src/vigilo/themes/templates/vigimap/jstest.html
+++ b/src/vigilo/themes/templates/vigimap/jstest.html
@@ -12,6 +12,7 @@
   <!-- Libraries -->
   <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
   <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+  <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
   <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
 
   <!-- Necessary global variables -->
