--- a/src/vigilo/themes/templates/vigiadmin/delete_downtime.html
+++ b/src/vigilo/themes/templates/vigiadmin/delete_downtime.html
@@ -13,12 +13,13 @@
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/Autocompleter/Autocompleter.css')}" />
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/downtime.css')}" />
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
-    <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.Request.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/Observer.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/Autocompleter/vigilo.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/mootools-vigilo.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Autocompleter.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Autocompleter.Request.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter/Observer.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/Autocompleter.Request.VigiloJSON.js')}"></script>
 </head>
 
 <body>
